--- a/frontend/src/views/companies/products/main.njk
+++ b/frontend/src/views/companies/products/main.njk
@@ -181,11 +181,11 @@
             {% if pagination.back %}
             <a href="{{ update_query(query, { page: page - 1 }) }}"
                 class="px-4 py-2 rounded-xl bg-white/10 hover:bg-white/20 transition">
-                ← Anterior
+                <i class="fa-duotone fa-regular fa-angle-left"></i> Anterior
             </a>
             {% else %}
             <span class="px-4 py-2 rounded-xl bg-white/5 text-gray-500 cursor-not-allowed">
-                ← Anterior
+                <i class="fa-duotone fa-regular fa-angle-left"></i> Anterior
             </span>
             {% endif %}
 
@@ -196,11 +196,11 @@
             {% if pagination.next %}
             <a href="{{ update_query(query, { page: page +1 }) }}"
                 class="px-4 py-2 rounded-xl bg-white/10 hover:bg-white/20 transition">
-                Siguiente →
+                Siguiente <i class="fa-duotone fa-regular fa-angle-right"></i>
             </a>
             {% else %}
             <span class="px-4 py-2 rounded-xl bg-white/5 text-gray-500 cursor-not-allowed">
-                Siguiente →
+                Siguiente <i class="fa-duotone fa-regular fa-angle-right"></i>
             </span>
             {% endif %}
         </div>
