--- a/frontend/src/views/platform/users/read.njk
+++ b/frontend/src/views/platform/users/read.njk
@@ -52,7 +52,7 @@
                     </p>
                 </div>
             </div>
-
+            {% if "platform.users.update" in permissions %}
             <div class="flex items-center gap-3">
                 <a href="/platform/users/update/{{ user_data.id }}"
                     class="bg-(--accent) hover:bg-(--accent-hover) text-white px-6 py-3 rounded-2xl text-sm font-bold flex items-center justify-center gap-2 transition-all shadow-xl shadow-orange-900/20 active:scale-95 cursor-pointer">
@@ -60,6 +60,7 @@
                     Editar
                 </a>
             </div>
+            {% endif %}
         </div>
 
         <div class="grid grid-cols-1 lg:grid-cols-12 gap-8">
